Move completed to bottom; fix spacing

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -60,7 +60,4 @@ body {
 }
 
 .completed-list-open {
-    max-height: 450px;
-    transition: max-height 200ms;
-    overflow-y: scroll;
 }
